# LindbladTTN

./: CHANGELOG.md  LICENSE  README.md  TENSO_ANALYSIS.md  TUTORIAL.md  pyproject.toml  requirements.txt
benchmarks/: __init__.py  test_effective.py  test_jc_vs_qutip.py  test_qec.py  test_sites.py
docs/: api.html  background.html  build_notebooks.py  build_search_index.py  cite.html  contact.html  examples.html  getting-started.html  index.html  input-generator.html  installation.html  search-index.json  sitemap.xml  structure.html
docs/assets/css/: main.css  prism-lindblad.css
docs/notebooks/: driven_qubit.ipynb  five_qubit_cascade.ipynb  five_qubit_cat_state.ipynb  scaling_benchmark.ipynb  single_qubit_decay.ipynb  two_qubit_bell_state.ipynb
docs/roadmap_site/: changelog.html
examples/: _run_hybrid_plot.py  cat_state_benchmark.py  five_qubit_cascade_gaussian_drives.py  five_qubit_cat_drives.py  five_qubit_cat_state.py  hybrid_vanadyl_transmon.py  qutip_circuit.py  qutip_driven.py  qutip_parity.py  qutip_simple.py  two_qubit_bell_state.py
lindblad_ttn/: __init__.py  effective.py  solver.py  templates.py  time_dependent.py
lindblad_ttn/control/: __init__.py  pulses.py
lindblad_ttn/core/: __init__.py  backend.py  gauge.py  graph.py  model.py  sop.py
lindblad_ttn/physics/: __init__.py  frame_factory.py  liouville.py  liouville_nd.py  liouvillian.py  liouvillian_nd.py
lindblad_ttn/propagation/: __init__.py  effective_h.py  integrators.py  steady.py  tdvp.py
lindblad_ttn/qec/: __init__.py  stabilizers.py
lindblad_ttn/sites/: __init__.py  base.py  boson.py  spin.py  spin_half.py
tests/: test_intra_sim_parallel.py  test_millisecond_stability.py  test_qutip_parity.py  test_scaling.py  test_single_qubit.py  test_two_qubit_driven.py
(+7 files in other folders)
