[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lindblad-ttn"
dynamic = ["version"]
description = "Lindblad master equation solver using Tree Tensor Networks (TTN) and TDVP"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Juan Camilo Rodriguez" },
]
keywords = [
    "quantum",
    "open-quantum-systems",
    "lindblad",
    "tensor-networks",
    "tdvp",
    "tree-tensor-network",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0",
    "torchdiffeq>=0.2",
    "numpy>=1.24",
    "scipy>=1.10",
    "tqdm>=4.65",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]
qec = ["pymatching>=2.0"]
examples = ["qutip>=5.0"]
all = ["pytest>=7.4", "pytest-cov", "pymatching>=2.0", "qutip>=5.0"]

[project.urls]
Homepage = "https://github.com/juan0603-chem/LindbladTTN"
Repository = "https://github.com/juan0603-chem/LindbladTTN"
Changelog = "https://github.com/juan0603-chem/LindbladTTN/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "lindblad_ttn.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["lindblad_ttn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
